--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -58,7 +58,7 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "print(\"Checking auto save?\")"
       ],
       "execution_count": 0,
       "outputs": []
